styles/styles.css
/* ... */
/* tooltip position top */
.redesign-v2 .tooltip--top::before,
.redesign-v2 .tooltip--top::after {
  bottom: 60%;
  left: 50%;
  transform: translate(-50%);
  margin-bottom: 15px;
}

.redesign-v2 .tooltip--top::after {
  margin-bottom: 8.5px;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 7px solid var(--c-white);
}

/* tooltip position right */
.redesign-v2 .tooltip--right::before,
.redesign-v2 .tooltip--right::after {
  top: 50%;
  left: 60%;
  transform: translate(0, -50%);
  margin-left: 15px;
}

.redesign-v2 .tooltip--right::after {
  margin-left: 8.5px;
  border-top: 5px solid transparent;
  border-right: 7px solid var(--c-white);
  border-bottom: 5px solid transparent;
}

/* tooltip position left */
.redesign-v2 .tooltip--left::before,
.redesign-v2 .tooltip--left::after {
  top: 50%;
  right: 60%;
  transform: translate(0, -50%);
  margin-right: 15px;
}

.redesign-v2 .tooltip--left::after {
  margin-right: 8.5px;
  border-top: 5px solid transparent;
  border-left: 7px solid var(--c-white);
  border-bottom: 5px solid transparent;
}

/* tooltip position bottom */
.redesign-v2 .tooltip--bottom::before,
.redesign-v2 .tooltip--bottom::after {
  top: 60%;
  left: 50%;
  transform: translate(-50%);
  margin-top: 15px;
}

.redesign-v2 .tooltip--bottom::after {
  margin-top: 8.5px;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 7px solid var(--c-white);
}

/* generic tooltip styles  ends here */

/* external app styles start */

.external-app header,
.external-app footer {
  display: none;
}

.external-app .v2-iframe-wrapper {
  padding: 0 !important;
  margin: 0 !important;
}

.external-app .section.v2-iframe-container {
  padding: 0;
}

/* external app styles end */

/* truck configurator style overrides start */

.truck-configurator,
.truck-configurator body main {
  height: 100%;
}

.truck-configurator #configurator img {
  max-width: none;
}

.truck-configurator #configurator form input {
  border: none;
}

.truck-configurator header {
  display: none;
}

/* truck configurator style overrides end */

